zabo-server-deployment/base/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabo-server
  labels:
    app: zabo-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zabo-server
  template:
    metadata:
      labels:
        app: zabo-server
    spec:
      containers:
        - name: zabo-server
          image: ghcr.io/sparcs-kaist/zabo-server:dev
          ports:
          - containerPort: 6001
            name: http-port
