zabo-server-deployment/base/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabo-service
spec:
  selector:
    app: zabo-server
  ports:
  - name: http-port
    protocol: TCP
    port: 6001
    targetPort: http-port
