zabo-server-deployment/base/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /api/hc
    alb.ingress.kubernetes.io/target-type: 'ip'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:666583083672:certificate/2f5020e0-01dd-43dd-aa7e-0699015d6b89
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
  name: zabo-ingress
  namespace: zabo
  finalizers:
    - ingress.k8s.aws/resources
  labels:
    app: zabo-ingress
spec:
  ingressClassName: alb
  rules:
  - host: zabo-staging.sparcs.org
    http:
      paths:
      - path: /
        backend:
          service:
            name: zabo-svc
            port: 80
        pathType: Prefix
  tls:
  - hosts:
    - zabo-staging.sparcs.org
